--- a/views/deliveryMenu.ejs
+++ b/views/deliveryMenu.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Available Meals</title>
-    <link rel="stylesheet" href="../styles/deliveryMenu.css">
+   <link rel="stylesheet" href="/styles/deliveryMenu.css">
 </head>
 <body>
     <!-- Side Menu -->
